<resources>
    <string name="app_name">新闻客户端</string>
    <string name="text_message">资讯</string>
    <string name="title_home">title home</string>
    <string name="title_share">title share</string>
    <string name="lead_page_point">lead page point</string>
    <string name="image_logo">image logo</string>
    <string name="lead_point_description"/>
    <string name="logo_image">logo image</string>
    <string name="txt_title_default">资讯</string>
    <string name="text_military">军事</string>
    <string name="text_society">社会</string>
    <string name="text_economy">经济</string>
    <string name="text_finance">金融</string>
    <string name="text_science">科技</string>
    <string name="picture_more">picture more</string>
    <string name="news_icon">news icon</string>
    <string name="text_news_title">标题</string>
    <string name="text_news_content">新闻主要内容</string>
    <string name="text_news_time">2016&#8211;01&#8211;01 00:00:00</string>
    <string name="left_menu_icon">left menu icon</string>
    <string name="text_now_login">立刻登录</string>
    <string name="text_login">登录</string>
    <string name="text_update">更新版本</string>
    <string name="text_input_username">请输入用户昵称</string>
    <string name="text_input_password">密码:6到16位字符</string>
    <string name="text_regist">注册</string>
    <string name="text_forget_pwd">忘记密码</string>
    <string name="text_login_title">用户登录</string>
    <string name="text_regist_title">用户注册</string>
    <string name="text_forget_title">忘记密码</string>
    <string name="text_update_msg">当前已是最新版本</string>
    <string name="text_input_email">请输入邮箱地址</string>
    <string name="text_input_name">请输入昵称</string>
    <string name="text_regist_now">立即注册</string>
    <string name="text_clause">我同意\"服务条款\"和\"网络用户隐私保护和个人信息利用政策\"</string>

    <string name="regist_success">注册成功</string>
    <string name="regist_user_filed">注册失败,用户已满</string>
    <string name="regist_user_exist">用户已存在</string>
    <string name="regist_email_exist">该邮箱已被注册</string>
    <string name="not_agree_clause">没有同意协议条款!</string>
    <string name="email_format_error">请输入正确的邮箱格式</string>
    <string name="regist_name_error">请输入用户昵称</string>
    <string name="pwd_length_error">密码长度错误</string>
    <string name="text_forget_email">请输入注册时的邮箱</string>
    <string name="send_to_email">密码已发送到邮箱</string>
    <string name="text_ok">确认</string>
    <string name="password_empty">密码不能为空</string>
    <string name="username_empty">请输入用户名</string>
    <string name="login_success">登陆成功</string>
    <string name="now_loading">now loading</string>
    <string name="press_again_exit">在按一次退出!</string>
    <string name="image_user">image user</string>
    <string name="share">share</string>
    <string name="has_collected">已经收藏过这条新闻了</string>
    <string name="success_collected">收藏成功</string>
    <string name="is_or_not_delete">是否删除这条新闻?</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xxlist">xxlist</string>
    <string name="image_back">image back</string>
    <string name="text_comment">869 跟帖</string>
    <string name="image_collect">image collect</string>
    <string name="text_long_distance">登陆失败，异地登录</string>
    <string name="ip_limit">登陆失败，ip被限制</string>
    <string name="login_name_pwd_error">用户名或密码错误</string>
    <string name="text_unlogin">退出登录</string>
    <string name="text_user_default">USER</string>
    <string name="user_head">user head</string>
    <string name="user_point_default">积分：0</string>
    <string name="txt_comment_count_default">跟帖数量统计：0</string>
    <string name="text_login_log">登陆日志</string>
    <string name="login_time_default">2016&#8211;12&#8211;28</string>
    <string name="text_address_default">北京</string>
    <string name="text_title_user_center">用户中心</string>
    <string name="load_news">load news</string>
    <string name="email_not_exist">发送失败，该邮箱不存在</string>
    <string name="text_collect">加入收藏</string>
    <string name="image_send">image send</string>
    <string name="write_your_comment">写评论</string>
    <string name="text_title_comment">评论</string>
    <string name="user">USER</string>
    <string name="edt_comment_empty">请先写评论哦，亲</string>
    <string name="not_login">对不起，您还没有登陆！</string>
    <string name="set_user_head">设置您的靓照</string>
    <string name="camera">camera</string>
    <string name="take_photo">调用相机拍照</string>
    <string name="select_from_gallery">从图库选择</string>
    <string name="text_cancel_collect">取消收藏</string>
    <string name="text_add_collect">加入收藏</string>
    <string name="text_gallery">图库</string>
    <string name="text_camera">相机</string>
    <string name="not_select_pic">未选择图片</string>
    <string name="found_new_version">发现新版本，是否升级？</string>
    <string name="separator">/</string>
    <string name="down_length_default">0.0k</string>
    <string name="total_length_default">1.0M</string>
    <string name="downloading">下载中</string>
    <string name="redown">重新下载</string>
    <string name="cancel_down">取消下载</string>
    <string name="connect_error">网络连接失败</string>
    <string-array name="left_menu_texts_cn">
        <item>新闻</item>
        <item>收藏</item>
        <item>本地</item>
        <item>跟帖</item>
        <item>图片</item>
    </string-array>
    <string-array name="left_menu_texts_en">
        <item>NEWS</item>
        <item>FAVORITE</item>
        <item>LOCAL</item>
        <item>COMMENT</item>
        <item>PHOTO</item>
    </string-array>
    <string-array name="text_title">
        <item>资讯</item>
        <item>收藏新闻</item>
        <item>本地</item>
        <item>跟帖</item>
        <item>图片</item>
    </string-array>
</resources>
