<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edt_username"
        style="@style/widget_style"
        android:hint="@string/text_input_username"
        android:inputType="text" />

    <EditText
        android:id="@+id/edt_pwd"
        style="@style/widget_style"
        android:hint="@string/text_input_password"
        android:inputType="textPassword" />

    <LinearLayout
        style="@style/widget_style"
        android:background="@null">

        <Button
            android:id="@+id/btn_regist"
            style="@style/login_btn_style"
            android:text="@string/text_regist" />

        <Button
            android:id="@+id/btn_forget"
            style="@style/login_btn_style"
            android:text="@string/text_forget_pwd" />

        <Button
            android:id="@+id/btn_login"
            style="@style/login_btn_style"
            android:text="@string/text_login" />
    </LinearLayout>
</LinearLayout>