<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/title_color"
                android:gravity="center_vertical"
                android:paddingBottom="2dp"
                android:paddingTop="2dp">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginLeft="5dp"
        android:contentDescription="@string/image_back"
        android:src="@mipmap/back"/>

    <TextView
        android:id="@+id/txt_title2"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_centerHorizontal="true"
        android:text="@string/text_message"
        android:textColor="@color/white"
        android:textSize="@dimen/title_text_size"/>

    <TextView
        android:id="@+id/txt_comnum"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_alignBottom="@+id/img_collect_news"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/img_collect_news"
        android:background="@color/comment_bg_color"
        android:gravity="center"
        android:text="@string/text_comment"
        android:textColor="@color/black"
        android:textSize="15sp"/>

    <ImageView
        android:id="@+id/img_collect_news"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/btn_bg_image_selector"
        android:clickable="true"
        android:contentDescription="@string/image_collect"
        android:src="@mipmap/news_menu"/>
</RelativeLayout>