<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context="com.zx.news2.DownloadActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/popup_bg"/>

    <ProgressBar
        android:id="@+id/pgb_download"
        style="@android:style/Widget.Holo.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:progressDrawable="@drawable/load_pgb_style"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/txt_down_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/down_length_default"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/separator"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/txt_total_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_length_default"
            android:textColor="@color/black"
            android:textSize="20sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/popup_bg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/txt_redown"
            style="@style/down_bottom_txt_style"
            android:text="@string/redown"/>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/popup_bg"/>

        <TextView
            android:id="@+id/txt_cancel_down"
            style="@style/down_bottom_txt_style"
            android:text="@string/cancel_down"/>
    </LinearLayout>
</LinearLayout>
