<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/news_item_bg_selector"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/news_list_padding"
    android:paddingTop="@dimen/news_list_padding">

    <ImageView
        android:id="@+id/img_news_icon"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:contentDescription="@string/news_icon"
        android:src="@mipmap/biz_navigation_tab_news" />

    <TextView
        android:id="@+id/txt_news_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/img_news_icon"
        android:maxLines="1"
        android:text="@string/text_news_title"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_news_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_news_title"
        android:layout_below="@+id/txt_news_title"
        android:layout_toRightOf="@+id/img_news_icon"
        android:maxLines="1"
        android:text="@string/text_news_content"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt_news_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/img_news_icon"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:text="@string/text_news_time"
        android:textColor="@color/black"
        android:textSize="12sp" />
</RelativeLayout>