<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/title_color"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/img_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/title_image_margin"
        android:contentDescription="@string/title_home"
        android:src="@mipmap/ic_title_home_default" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:gravity="center"
        android:text="@string/text_message"
        android:textColor="@color/white"
        android:textSize="@dimen/title_text_size" />

    <ImageView
        android:id="@+id/img_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/title_image_margin"
        android:contentDescription="@string/title_share"
        android:src="@mipmap/ic_title_share_default" />
</LinearLayout>