<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_center"
    android:layout_width="match_parent"
    android:background="@color/user_center_bg"
    android:layout_height="match_parent"
    tools:context="com.zx.news2.UserCenterActivity">

    <include
        android:id="@+id/lyt_user_title"
        layout="@layout/layout_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/lyt_user"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/lyt_user_title"
        android:background="@mipmap/center_top_bg">

        <com.zx.news2.view.CircleImageView
            android:id="@+id/img_user_head"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/user_head" />

        <TextView
            android:id="@+id/txt_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/img_user_head"
            android:text="@string/text_user_default"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="35dp"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/txt_user_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_user_name"
            android:layout_toRightOf="@+id/img_user_head"
            android:text="@string/user_point_default"
            android:layout_marginTop="25dp"
            android:layout_alignLeft="@+id/txt_user_name"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/lyt_user"
        android:layout_marginTop="40dp"
        android:layout_above="@+id/btn_logoff"
        android:layout_marginBottom="10dp"
        android:background="@mipmap/user_center_lyt_bg"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_comment_count"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:text="@string/txt_comment_count_default"
            android:layout_height="40dp" />
        <View
            android:layout_width="match_parent"
            android:background="@color/comment_bg_color"
            android:layout_height="0.5dp"/>

        <TextView
            android:text="@string/text_login_log"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ListView
            android:id="@+id/lst_login_log"
            android:listSelector="@color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_logoff"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/longbtn_bg_image_selector"
        android:text="@string/text_unlogin"
        android:textColor="@color/white"
        android:textSize="20sp" />
</RelativeLayout>
